--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "bootstrap": "^4.1.1",
+    "immutable": "^3.8.2",
     "isomorphic-fetch": "^2.2.1",
     "json-server": "^0.14.0",
     "prop-types": "^15.6.2",
@@ -21,6 +22,7 @@
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
+    "redux-immutable": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   },
