--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.0",
     "react-bootstrap": "^0.32.1",
+    "react-bootstrap-button-loader": "^1.0.12",
+    "react-css-loaders": "0.0.5",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
