--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "babel-preset-stage-0": "^6.24.1",
     "bootstrap": "^4.1.1",
     "immutable": "^3.8.2",
-    "isomorphic-fetch": "^2.2.1",
     "json-server": "^0.14.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.0",
@@ -22,6 +21,8 @@
     "react-css-loaders": "0.0.5",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "redux-immutable": "^4.0.0",
