--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "bootstrap": "^4.1.1",
+    "connected-react-router": "^4.3.0",
     "immutable": "^3.8.2",
     "json-server": "^0.14.0",
     "prop-types": "^15.6.2",
