--- a/package.json
+++ b/package.json
@@ -3,36 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "animated": "^0.2.2",
-    "axios": "^0.18.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "bootstrap": "^4.1.1",
-    "connected-react-router": "^4.3.0",
-    "immutable": "^3.8.2",
-    "json-server": "^0.14.0",
-    "prop-types": "^15.6.2",
-    "react": "^16.4.0",
-    "react-addons-css-transition-group": "^15.6.2",
-    "react-bootstrap": "^0.32.1",
-    "react-bootstrap-button-loader": "^1.0.12",
+    "animated": "0.2.2",
+    "axios": "0.18.0",
+    "babel-core": "6.26.3",
+    "babel-loader": "7.1.4",
+    "babel-plugin-add-module-exports": "0.2.1",
+    "babel-polyfill": "6.26.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "bootstrap": "4.1.1",
+    "connected-react-router": "4.3.0",
+    "immutable": "3.8.2",
+    "json-server": "0.14.0",
+    "prop-types": "15.6.2",
+    "react": "16.4.0",
+    "react-addons-css-transition-group": "15.6.2",
+    "react-bootstrap": "0.32.1",
+    "react-bootstrap-button-loader": "1.0.12",
     "react-css-loaders": "0.0.5",
-    "react-dom": "^16.4.0",
-    "react-redux": "^5.0.7",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-router-redux": "^4.0.8",
+    "react-dom": "16.4.0",
+    "react-redux": "5.0.7",
+    "react-router": "4.3.1",
+    "react-router-dom": "4.3.1",
+    "react-router-redux": "4.0.8",
     "react-scripts": "1.1.4",
-    "react-transition-group": "^2.4.0",
-    "redux": "^4.0.0",
-    "redux-immutable": "^4.0.0",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "react-transition-group": "2.4.0",
+    "redux": "4.0.0",
+    "redux-immutable": "4.0.0",
+    "redux-logger": "3.0.6",
+    "redux-thunk": "2.3.0"
   },
   "scripts": {
     "start": "react-scripts start & npm run apiserver",
@@ -42,6 +42,6 @@
     "apiserver": "json-server --watch --port 4000 api/db.json"
   },
   "devDependencies": {
-    "redux-devtools-extension": "^2.13.5"
+    "redux-devtools-extension": "2.13.5"
   }
 }
