--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "0.32.1",
     "react-bootstrap-button-loader": "1.0.12",
     "react-css-loaders": "0.0.5",
+    "react-delay": "0.1.0",
     "react-dom": "16.4.0",
     "react-redux": "5.0.7",
     "react-router": "4.3.1",
