--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "babel-polyfill": "6.26.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
-    "babel-preset-react-app": "^3.1.1",
+    "babel-preset-react-app": "3.1.1",
     "babel-preset-stage-0": "6.24.1",
     "babel-runtime": "6.26.0",
     "bootstrap": "4.1.1",
@@ -25,7 +25,7 @@
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "4.10.0",
-    "eslint-config-react-app": "^2.1.0",
+    "eslint-config-react-app": "2.1.0",
     "eslint-loader": "1.9.0",
     "eslint-plugin-flowtype": "2.39.1",
     "eslint-plugin-import": "2.8.0",
@@ -50,7 +50,7 @@
     "react-bootstrap-button-loader": "1.0.12",
     "react-css-loaders": "0.0.5",
     "react-delay": "0.1.0",
-    "react-dev-utils": "^5.0.1",
+    "react-dev-utils": "5.0.1",
     "react-dom": "16.4.0",
     "react-redux": "5.0.7",
     "react-router": "4.3.1",
